make some simple style

--- a/bottle/web/wedding/template/index.html
+++ b/bottle/web/wedding/template/index.html
@@ -1,29 +1,104 @@
 <!DOCTYPE html>
-<html>
+<html class="hb-loaded">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="google-site-verification" content="tM0rlxogcouz7qvIpvfvsV-ghBHbBAuwFdqDwYrs8Ew">
-    <title>~Seven & Trytry's Wedding~</title>
-    <meta name="title" content="褪墨・时间管理，个人提升，生活健康与习惯">
-    <meta name="description" content="褪墨・时间管理是一个关注时间管理、GTD、个人提升、生活健康与习惯、学习方法和演讲技巧的网站。我们的目标是：把事情做到更好！">
-    <meta name="author" content="褪墨・时间管理">
-    <meta name="copyright" content="褪墨・时间管理（www.mifengtd.cn）版权所有，转载请注明来源、作者及原文链接。">
-    <link rel="dns-prefetch" href="http://assets.mifengtd.cn/">
-    <link rel="dns-prefetch" href="http://images.mifengtd.cn/">
-    <link rel="dns-prefetch" href="http://www.google-analytics.com/">
-    <link rel="dns-prefetch" href="http://mifengtd.disqus.com/">
-    <link rel="dns-prefetch" href="http://v3.jiathis.com/">
-    <link rel="dns-prefetch" href="http://widget.wumii.cn/">
-    <link rel="canonical" href="http://www.mifengtd.cn/">
-    <link rel="shortcut icon" href="http://assets.mifengtd.cn/favicon.ico">
-    <link rel="alternate" type="application/rss+xml" title="订阅褪墨文章" href="http://www.mifengtd.cn/feed.xml">
-    <!--[if lte IE 8]><link rel="stylesheet" href="http://assets.mifengtd.cn/assets/css/main-old-ie-20140919.min.css" /><![endif]--> <!--[if gt IE 8]><!--> 
-    <link rel="stylesheet" href="static/main-20140919.css"> <!--<![endif]--> <script src="static/count-data.js" async=""></script>
+    <meta charset="utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta name="google-site-verification" content="tM0rlxogcouz7qvIpvfvsV-ghBHbBAuwFdqDwYrs8Ew"/>
+    <title>seven &hearts; tryry</title>
+    <meta name="title" content="seven &hearts; tryry"/>
+    <meta name="description" content="2015-01-09"/>
+    <meta name="copyright" content="（www.mifengtd.cn）版权所有，转载请注明来源、作者及原文链接。">
+    <link rel="dns-prefetch" href="//assets.mifengtd.cn">
+    <link rel="dns-prefetch" href="//images.mifengtd.cn">
+    <link rel="dns-prefetch" href="//www.google-analytics.com">
+    <link rel="dns-prefetch" href="//mifengtd.disqus.com">
+    <link rel="dns-prefetch" href="//v3.jiathis.com">
+    <link rel="dns-prefetch" href="//widget.wumii.cn">
+    <link rel="canonical" href="http://www.mifengtd.cn/"/>
+    <link rel="shortcut icon" href="http://assets.mifengtd.cn/favicon.ico"/>
+    <link rel="alternate" type="application/rss+xml" title="订阅褪墨文章" href="http://www.mifengtd.cn/feed.xml"/>
+    <!--[if lte IE 8]><link rel="stylesheet" href="/static/main-20140919.css" /><![endif]--> <!--[if gt IE 8]><!--> <link rel="stylesheet" href="/static/main-20140919.css"/> <!--<![endif]-->
 </head>
 <body>
-    Hello world, {{name}}
+    <div id="layout">
+        <div id="main"> 
+            <div class="wrap pure-g">
+                <div class="primary pure-u-1 pure-u-md-2-3 pure-u-lg-4-5">
+                    <div class="header">
+                        <h1 class="brand"> <a href="http://54.68.157.119/" title="欢迎光临">&#9825;欢迎光临&#9825;</a> </h1>
+                        <h2>卢XX &hearts; 陆XX</h2>
+                    </div>
+                    <div class="content"></div>
+                </div>
+                <div class="secondary pure-u-1 pure-u-md-1-3 pure-u-lg-1-5">
+                    <div class="widget" id="widget-search"> <div class="widget-content"> <form action="http://www.baidu.com/baidu" target="_blank" id="search-form" class="pure-form pure-g"> <div class="pure-u-2-3"> <input name="tn" value="bds" type="hidden"> <input name="cl" value="3" type="hidden"> <input name="ct" value="2097152" type="hidden"> <input name="si" value="www.mifengtd.cn" type="hidden"> <input id="search-box" name="word" placeholder="卢智聪陆超雯婚礼" title="卢智聪陆超雯婚礼" maxlength="100"> </div> <div class="pure-u-1-3"> <input value="搜索" class="pure-button" type="submit"> </div> </form> </div> </div>
+                    <div class="pure-g">
+                        <div class="pure-u-1 pure-u-sm-1-3 pure-u-md-1">
+                            <div class="widget widget-small quote">
+                                <h3 class="widget-title">推荐摘录</h3>
+                                <div class="widget-content" id="widget-quote"><p>QUOTE CONTENT</p></div>
+                            </div>
+                        </div> 
+                        <div class="pure-u-1 pure-u-sm-1-3 pure-u-md-1"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="footer-main pure-g">
+                    <div class="pure-u-1 pure-u-sm-1-2"> <p class="footer-cheer">xxxx</p></div>
+                    <div class="pure-u-1 pure-u-sm-1-2"> <p class="footer-contact">yyyy</p> </div>
+                </div>
+            </div>
+        </div>
+        <a href="#menu" id="menuLink" class="menu-link"><span></span></a>
+        <div id="menu">
+            <div class="pure-menu pure-menu-open">
+                <a class="pure-menu-heading" href="./">聪聪&hearts;雯雯</a>
+                <ul class="nav"> 
+                    <li><a href="./">&hearts;&nbsp;首页</a></li> 
+                    <li><a href="./photos">&hearts;&nbsp;相册</a></li> 
+                    <li><a href="./maps">&hearts;&nbsp;地图</a></li> 
+                    <li><a href="./abouts">&hearts;&nbsp;我们</a></li> 
+                </ul>
+            </div>
+         </div>
+    </div>
+<!-- *************************************************************************** <!-->
+<div class="page-widget">
+    <div class="widget-content">
+        <script src="/static/linkid.js" async="" type="text/javascript"></script>
+        <script src="/static/ca-pub-9138033500601464.js" type="text/javascript" async=""></script>
+        <script src="/static/count.js" async=""></script>
+        <script src="/static/main-20140919.js" async=""></script>
+        <script src="/static/analytics.js" async=""></script>
+        <script async="" src="/static/adsbygoogle.js"></script>
+        <ins data-adsbygoogle-status="done" class="adsbygoogle" style="display: block; height: 90px;" data-ad-client="ca-pub-9138033500601464" data-ad-slot="7491236942" data-ad-format="auto">
+            <ins id="aswift_0_expand" style="display:inline-table;border:none;height:90px;margin:0;padding:0;position:relative;visibility:visible;width:800px;background-color:transparent">
+                <ins id="aswift_0_anchor" style="display:block;border:none;height:90px;margin:0;padding:0;position:relative;visibility:visible;width:800px;background-color:transparent">
+                    <iframe marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no" allowfullscreen="true" onload="var i=this.id,s=window.google_iframe_oncopy,H=s&amp;&amp;s.handlers,h=H&amp;&amp;H[i],w=this.contentWindow,d;try{d=w.document}catch(e){}if(h&amp;&amp;d&amp;&amp;(!d.body||!d.body.firstChild)){if(h.call){setTimeout(h,0)}else if(h.match){try{h=s.upd(h,i)}catch(e){}w.location.replace(h)}}" id="aswift_0" name="aswift_0" style="left:0;position:absolute;top:0;" frameborder="0" height="90" width="800"></iframe>
+                </ins>
+            </ins>
+        </ins>
+        <script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>
+    </div>
+</div>
+<!-- *************************************************************************** <!-->
+    <script>var disqus_shortname="mifengtd";</script>
+    <script>!function(e,a,n,t,i,c,s){e.GoogleAnalyticsObject=i,e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},e[i].l=1*new Date,c=a.createElement(n),s=a.getElementsByTagName(n)[0],c.async=1,c.src=t,s.parentNode.insertBefore(c,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-1877368-1","mifengtd.cn"),ga("require","displayfeatures"),ga("require","linkid"),ga("send","pageview");</script>
+<!-- *************************************************************************** <!-->
+    <script src="/static/jquery-1.js"></script>
+    <script>window.jQuery||document.write('<script src="/static/jquery-1.js"><\/script>');</script>
+    <script>
+        function js(s){
+            var e=document,t="script",n=e.createElement(t),c=e.getElementsByTagName(t)[0];
+            n.async=1,n.src=s,c.parentNode.insertBefore(n,c)}js("/static/main-20140919.js"),js("/static/count.js");
+    </script>
+
+<!-- *************************************************************************** <!-->
+<!-- huaban <!-->
+<!-- *************************************************************************** <!-->
+    <script src="/static/load.js" async="true" type="text/javascript"></script>
 </body>
 </html>
